# InfoChallengeBot

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  dotenv  pyproject.toml
docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
docs/: index.md
src/: bot.py
src/cogs/: manager.py  registrator.py  teambuilder.py
src/common/: checks.py
src/models/: __init__.py  teammember.py
